# vestige

./: .gitignore  CHANGELOG.md  CLAUDE.md  CLAUDE.md.template  Cargo.toml  Dockerfile  README.md  SECURITY.md  glama.json  package.json  server.json
.github/workflows/: ci.yml  guard-no-private-cloud.yml  pages.yml  release.yml  test.yml
agents/: executioner.md
apps/dashboard/: package-lock.json  package.json  svelte.config.js
blackbox-proof-2026-06-22/: PROOF.md  REVIEW.md  dream-trace.json  dream-websocket-events.jsonl  memory-prs.json  memory_pr.json  phase-1-status.json  phase-3-trace.json  proof-summary.md  receipt.json  receipts.json  status.json  trace.json  websocket-events.jsonl
blackbox-proof-2026-06-22/screenshots/: README.md
crates/vestige-core/: Cargo.toml
crates/vestige-mcp/: Cargo.toml  README.md
demo/: PITCH-FINAL-spoken.md  README.md  funding-demo-script.md  funding-demo-v2-blow-it-open.md  postdict-demo.sh
docs/: AGENT-MEMORY-PROTOCOL.md  COGNITIVE_SANDWICH.md  COMPOSED_GRAPH.md  CONFIGURATION.md  CONNECTORS.md  FAQ.md  MEMORY_CINEMA.md  MERGE_SUPERSEDE.md  ROADMAP.md  SANHEDRIN_RECEIPTS.md  SANHEDRIN_TEST_INTEGRITY_DELTAS.md  SCIENCE.md  STORAGE.md  VESTIGE_STATE_AND_PLAN.md
hooks/: sanhedrin-local.py  sanhedrin-presets.json  sanhedrin.sh  sanhedrin_core.py
scripts/: check-no-private-cloud.sh  check-sandwich-prereqs.sh  install-sandwich.sh
tests/phase_1/: Cargo.toml  cognitive_module_isolation.rs  domain_column_migration.rs  embedder_trait.rs  embedding_model_registry.rs  send_bound_variant.rs  trait_round_trip.rs
(+181 files in other folders)
